# fluid-solid-interation-dealii

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: FSI.cpp  FSI.hpp  FSIParallel.cpp  FSIParallel.hpp  main.cpp  simulate_parallel.cpp  simulate_serial.cpp  test.cpp
